add index and project pages

--- a/project.html
+++ b/project.html
@@ -17,17 +17,17 @@
       </h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">About</a></li>
+          <li><a href="index.html#home">Home</a></li>
+          <li><a href="index.html#tentang">About</a></li>
           <li class="dropdown">
             <a href="#">Projek</a>
             <ul class="dropdown-menu">
-              <li><a href="index.html">Latest Project</a></li>
+              <li><a href="index.html#projek">Latest Project</a></li>
               <li><a href="project.html">All Projects</a></li>
             </ul>
           </li>
-          <li><a href="index.html">Skill</a></li>
-          <li><a href="index.html">Contact</a></li>
+          <li><a href="index.html#skill">Skill</a></li>
+          <li><a href="index.html#kontak">Contact</a></li>
         </ul>
       </nav>
     </div>
