Save index.html and project files

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>A complete e-commerce platform built with the MERN stack (MongoDB, Express, React, Node.js).
             </p>
             <div class="projek-links">
-              <a href="projectsatu.html">Read More</a>
+              <a href="">Read More</a>
               <a href="#" target="_blank">Live Demo</a>
             </div>
           </div>
@@ -87,7 +87,7 @@
             <h3>Website Landing Page</h3>
             <p>A modern, responsive landing page for a tech startup, built with HTML, CSS, and JavaScript.</p>
             <div class="projek-links">
-              <a href="projectdua.html">Read More</a>
+              <a href="">Read More</a>
               <a href="#" target="_blank">Live Demo</a>
             </div>
           </div>
@@ -100,7 +100,7 @@
             <p>A simple note-taking app with user authentication features built using Vue.js and
               Firebase.</p>
             <div class="projek-links">
-              <a href="projecttiga.html">Read More</a>
+              <a href="">Read More</a>
               <a href="#" target="_blank">Source Code</a>
             </div>
           </div>
@@ -250,7 +250,7 @@
   </main>
 
   <footer class="footer">
-    <p>Copyright © 2025 Shan Group | Built with love and code.</p>
+    <p>Copyright © 2025 Muhammad Ahsan Portfolio| Built with love and code.</p>
     <div class="footer-menu">
       <a href="#home">Home</a>
       <a href="#tentang">About</a>
