--- a/project.html
+++ b/project.html
@@ -36,13 +36,7 @@
   <!-- Filter dan Judul Project -->
   <section id="all-project">
     <h2 class="section-title">All Project</h2>
-    <div class="project-filter">
-      <a href="#projek"><button class="filter-button" data-filter="all">All</button></a>
-      <a href="#projek"><button class="filter-button" data-filter="uiux">UI UX</button></a>
-      <a href="#projek"><button class="filter-button" data-filter="web">Web</button></a>
-      <a href="#projek"><button class="filter-button" data-filter="app">App</button></a>
-    </div>
-
+  
     <div class="project-grid">
       <!-- (Opsional) Tempat untuk menampilkan project yang difilter -->
     </div>
@@ -58,7 +52,7 @@
           <h3>Aplikasi E-commerce</h3>
           <p>A complete e-commerce platform built with the MERN stack (MongoDB, Express, React, Node.js)</p>
           <div class="projek-links">
-            <a href="projectsatu.html">Read More</a>
+            <a href="">Read More</a>
             <a href="#" target="_blank">live Demo</a>
           </div>
         </div>
@@ -72,7 +66,7 @@
           <p>Landing page yang responsif dan modern untuk sebuah startup teknologi, dibuat dengan HTML, CSS, dan
             JavaScript.</p>
           <div class="projek-links">
-            <a href="projectdua.html">Read More</a>
+            <a href="">Read More</a>
             <a href="#" >Live Demo</a>
           </div>
         </div>
@@ -86,7 +80,7 @@
           <p>Aplikasi pencatat sederhana dengan fitur otentikasi pengguna yang dibuat menggunakan Vue.js dan Firebase.
           </p>
           <div class="projek-links">
-            <a href="projecttiga.html">Read More</a>
+            <a href="">Read More</a>
             <a href="#">Live Demo</a>
           </div>
         </div>
@@ -130,7 +124,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>Copyright © 2025 Shan Group | Built with love and code.</p>
+    <p>Copyright © 2025 Muhammad Ahsan Portfolio | Built with love and code.</p>
     <div class="footer-menu">
       <a href="index.html">Home</a>
       <a href="index.html">About</a>
