--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   </style>
 </head>
 <body class="text-gray-800 font-sans">
+
+<!------------------------------------------------->
   <!-- Hero -->
  <section class="px-4 pt-20 pb-28 max-w-6xl mx-auto">
   <div class="flex flex-col md:flex-row items-center gap-12">
@@ -44,7 +46,7 @@
     <div class="flex justify-center md:justify-start fade-in">
       <div class="relative">
         <img 
-          src="https://mahsan-portfolioweb.vercel.app/gambar2.jpeg" 
+          src="foto/gambar2.jpeg" 
           alt="Muhammad Ahsan"
           class="w-48 h-48 md:w-60 md:h-60 rounded-2xl object-cover border-4 border-white shadow-2xl"
         />
@@ -64,15 +66,15 @@
       </p>
 
       <p class="mt-6 text-gray-700 leading-relaxed text-lg">
-        I build <span class="font-semibold">fast, accessible, and user-first</span> web applications using modern JavaScript stacks.
+         I craft <span class="font-semibold"> high-performance, scalable, and user-centered web applications </span> using modern and flexible technologies to solve real-world problems.
       </p>
 
       <div class="flex flex-wrap justify-center md:justify-start gap-4 mt-10">
         <a href="project.html" class="px-7 py-3.5 bg-primary text-white font-semibold rounded-xl hover:bg-indigo-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-0.5">
           View Projects
         </a>
-        <a href="mailto:ahsan.dev@example.com" class="px-7 py-3.5 bg-white border border-gray-300 text-gray-800 font-semibold rounded-xl hover:bg-gray-50 transition-all">
-          Email Me
+        <a href="siahsantv@gmail.com" class="px-7 py-3.5 bg-white border border-gray-300 text-gray-800 font-semibold rounded-xl hover:bg-gray-50 transition-all">
+          Let’s Collaborate
         </a>
       </div>
 
@@ -80,7 +82,7 @@
   </div>
 </section>
 
-
+<!------------------------------------------------->
   <!-- Tech Stack -->
 <section class="px-4 py-8">
   <div class="max-w-5xl mx-auto">
@@ -115,160 +117,200 @@
   </div>
 </section>
 
-
-  <!-- Projects -->
-  <section id="projects" class="px-4 py-20 max-w-6xl mx-auto">
-    <div class="text-center mb-16">
-      <h2 class="text-3xl md:text-4xl font-bold">Featured Projects</h2>
-      <p class="text-gray-600 mt-4 max-w-2xl mx-auto">
-        Real-world applications I’ve built with passion and precision.
-      </p>
-    </div>
-
-    <div class="space-y-12">
-      <!-- Project 1: E-Report -->
-      <div class="flex flex-col md:flex-row gap-6 items-center">
-        <div class="md:w-1/2">
-          <img src="https://placehold.co/600x400/4338CA/FFFFFF?text=One+School+E-Report" alt="E-Report" class="w-full rounded-xl shadow-md">
-        </div>
-        <div class="md:w-1/2">
-          <h3 class="text-2xl font-bold">One School E-Report</h3>
-          <p class="text-gray-600 mt-3">
-            A digital reporting system for schools to communicate student issues directly with parents and teachers in real-time.
-          </p>
-          <a href="https://one-school-e-report.vercel.app/" target="_blank" class="mt-4 inline-block text-primary font-medium hover:underline">Live Demo →</a>
-        </div>
-      </div>
-
-     <!-- Project 2: Psychology -->
-      <div class="flex flex-col md:flex-row-reverse gap-6 items-center">
-        <div class="md:w-1/2">
-          <img src="https://placehold.co/600x400/DC2626/FFFFFF?text=M-Ahsan+Psychology" alt="Psychology Platform" class="w-full rounded-xl shadow-md">
-        </div>
-        <div class="md:w-1/2">
-          <h3 class="text-2xl font-bold">M-Ahsan Psychology</h3>
-          <p class="text-gray-600 mt-3">
-            Online therapy platform offering HIPAA-compliant sessions with licensed psychologists in CA & NY.
-          </p>
-          <a href="https://m-ahsan-psychology.vercel.app/" target="_blank" class="mt-4 inline-block text-primary font-medium hover:underline">Live Demo →</a>
-        </div>
-      </div>
-
-      <!-- Project 3: Prime Edge -->
-      <div class="flex flex-col md:flex-row gap-6 items-center">
-        <div class="md:w-1/2">
-          <img src="https://placehold.co/600x400/059669/FFFFFF?text=Prime+Edge+Digital" alt="Prime Edge" class="w-full rounded-xl shadow-md">
-        </div>
-        <div class="md:w-1/2">
-          <h3 class="text-2xl font-bold">Prime Edge Digital</h3>
-          <p class="text-gray-600 mt-3">
-            Corporate website for a digital solutions agency, showcasing services, team, and client success stories.
-          </p>
-          <a href="https://prime-edge-digital.vercel.app/" target="_blank" class="mt-4 inline-block text-primary font-medium hover:underline">Live Demo →</a>
-        </div>
-      </div>
-
-      <!-- Project 4: Catatan App -->
-      <div class="flex flex-col md:flex-row-reverse gap-6 items-center">
-        <div class="md:w-1/2">
-          <img src="https://placehold.co/600x400/7C3AED/FFFFFF?text=Catatan+App" alt="Catatan App" class="w-full rounded-xl shadow-md">
-        </div>
-        <div class="md:w-1/2">
-          <h3 class="text-2xl font-bold">Catatan Application</h3>
-          <p class="text-gray-600 mt-3">
-            A minimalist note-taking app with Firebase authentication and real-time sync.
-          </p>
-          <a href="#" class="mt-4 inline-block text-primary font-medium hover:underline">View Code →</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
- <!-- Contact Section -->
-<section id="contact" class="px-6 py-28 bg-gradient-to-br from-white to-gray-100">
-  <div class="max-w-4xl mx-auto text-center">
-    <h2 class="text-4xl md:text-5xl font-extrabold text-dark tracking-tight">Let’s Collaborate</h2>
-    <p class="text-gray-600 mt-4 text-lg max-w-2xl mx-auto">
-      Have a project or idea in mind? I’d love to help you bring it to life.
+ <section id="projects" class="px-4 py-20 max-w-6xl mx-auto">
+  <div class="text-center mb-16">
+    <h2 class="text-3xl md:text-4xl font-bold">Featured Projects</h2>
+    <p class="text-gray-600 mt-4 max-w-2xl mx-auto">
+      Real-world applications I’ve built with passion and precision.
     </p>
   </div>
 
-  <div class="max-w-6xl mx-auto mt-16 grid grid-cols-1 lg:grid-cols-2 gap-12">
-    
-    <!-- Social Cards -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
-      
-      <a href="#" class="group glass-card p-6 flex items-center gap-4">
-        <i class="fab fa-github text-3xl group-hover:text-primary transition"></i>
-        <span class="font-semibold">GitHub</span>
-      </a>
+  <!------------------------------------------------>
+  <div class="space-y-12">
 
-      <a href="#" class="group glass-card p-6 flex items-center gap-4">
-        <i class="fab fa-linkedin text-3xl text-blue-600 group-hover:text-primary transition"></i>
-        <span class="font-semibold">LinkedIn</span>
-      </a>
+   <!-- Project 1: E-Report -->
+<div class="flex flex-col md:flex-row gap-6 items-center mb-12">
+<div class="md:w-1/2">
+<img src="foto/ERepor.png" alt="One School E-Report" class="w-full rounded-xl shadow-md border border-gray-100">
+</div>
+<div class="md:w-1/2">
+<h3 class="text-2xl font-bold">One ​​School E-Report</h3>
+<p class="text-gray-600 mt-3 leading-relaxed">
+The official digital reporting platform for reporting student issues directly to teachers and guardians. Displays real-time status: Incoming → Actioned → Completed.
+</p>
 
-      <a href="#" class="group glass-card p-6 flex items-center gap-4">
-        <i class="fab fa-whatsapp text-3xl text-green-500 group-hover:text-primary transition"></i>
-        <span class="font-semibold">WhatsApp</span>
-      </a>
+<!-- Technical Details -->
+<div class="mt-6 pt-4 border-t border-gray-200">
+<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+<p class="text-sm text-gray-600 mb-3">
+<strong>Role:</strong> Full-stack developer & UI/UX designer<br>
+<strong>Challenge:</strong> Maintaining the confidentiality of sensitive reports while ensuring status transparency.<br>
+<strong>Solution:</strong> Design a closed communication flow with two-way validation (teacher + system).
+</p> 
+<div class="flex flex-wrap gap-2"> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-html5 text-orange-500"></i> HTML 
+</span> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-css3-alt text-blue-600"></i> CSS 
+</span> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-js text-yellow-500"></i> JavaScript 
+</span> 
+</div> 
+</div> 
 
-      <a href="#" class="group glass-card p-6 flex items-center gap-4">
-        <i class="fab fa-instagram text-3xl text-pink-500 group-hover:text-primary transition"></i>
-        <span class="font-semibold">Instagram</span>
-      </a>
+<a href="https://one-school-e-report.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a>
+<a href="https://github.com/MuhammadAhsan-RPL/One-School-E-Report" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
+</div>
+</div>
+<!------------------------------------------------>
+<!-- Project 2: Psychology -->
+<div class="flex flex-col md:flex-row-reverse gap-6 items-center mb-12"> 
+<div class="md:w-1/2"> 
+<img src="foto/Psikolog.png" alt="M-Ahsan Psychology" class="w-full rounded-xl shadow-md border border-gray-100"> 
+</div> 
+<div class="md:w-1/2"> 
+<h3 class="text-2xl font-bold">M-Ahsan Psychology</h3> 
+<p class="text-gray-600 mt-3 leading-relaxed"> 
+Bilingual (EN/ID) online therapy platform for clients in the US, featuring CA & NY licensing, as well as secure, encrypted Zoom sessions. 
+</p>
 
-    </div>
+<!-- Technical Details -->
+<div class="mt-6 pt-4 border-t border-gray-200">
+<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+<p class="text-sm text-gray-600 mb-3">
+<strong>Role:</strong> Frontend developer & content strategist<br>
+<strong>Challenge:</strong> Conveying professional credentials while building emotional trust.<br>
+<strong>Solution:</strong> Human-touch visuals (photos of consultation rooms), clear text, and an emphasis on compliance (HIPAA).
+</p> 
+<div class="flex flex-wrap gap-2"> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-html5 text-orange-500"></i> HTML 
+</span> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-css3-alt text-blue-600"></i> CSS 
+</span> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-js text-yellow-500"></i> JavaScript 
+</span> 
+</span> 
+</div> 
+</div> 
 
-    <!-- Form -->
-    <div class="glass-card p-8">
-      <h3 class="text-2xl font-bold text-dark mb-6">Send a Message ✉️</h3>
-      <form class="space-y-4">
-        <input type="text" placeholder="Your Name" class="form-input" />
-        <input type="email" placeholder="Your Email" class="form-input" />
-        <textarea rows="5" placeholder="Write your message..." class="form-input"></textarea>
-        <button type="submit" class="w-full py-3 bg-primaryLight text-white font-semibold rounded-xl hover:bg-primary transition-all">
-          Send Now
+<a href="https://m-ahsan-psychology.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a>
+<a href="https://github.com/MuhammadAhsan-RPL/M-Ahsan-Psychology" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
+</div>
+</div>
+<!------------------------------------------------>
+<!-- Project 3: Prime Edge -->
+<div class="flex flex-col md:flex-row gap-6 items-center mb-12"> 
+<div class="md:w-1/2"> 
+<img src="foto/primeEdge .png" alt="Prime Edge Digital" class="w-full rounded-xl shadow-md border border-gray-100"> 
+</div> 
+<div class="md:w-1/2"> 
+<h3 class="text-2xl font-bold">Prime Edge Digital</h3> 
+<p class="text-gray-600 mt-3 leading-relaxed"> 
+Corporate website for a digital agency featuring services, case studies and global client testimonials. 
+</p>
+
+<!-- Technical Details -->
+<div class="mt-6 pt-4 border-t border-gray-200">
+<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+<p class="text-sm text-gray-600 mb-3">
+<strong>Role:</strong> Lead frontend developer<br>
+<strong>Challenge:</strong> Balancing premium aesthetics with loading speed & SEO.<br>
+<strong>Solution:</strong> Modular components, lazy image loading, and a scalable CSS architecture.
+</p> 
+<div class="flex flex-wrap gap-2"> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-html5 text-orange-500"></i> HTML 
+</span> 
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fas fa-paint-brush text-indigo-600"></i> Tailwind CSS 
+</span> 
+<span class="badge bg-light text-dark d-flex align-items-center gap-1 px-2 py-1 rounded">
+  <i class="fab fa-bootstrap"></i> Bootstrap
+</span>
+<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
+<i class="fab fa-js text-yellow-500"></i> JavaScript 
+</span> 
+</div> 
+</div> 
+
+<a href="https://prime-edge-digital.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a> 
+<a href="https://github.com/MuhammadAhsan-RPL/Company-Website" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
+</div>
+</div>
+
+
+
+<!------------------------------------------------>
+ <!-- Contact Section -->
+<section id="contact" class="px-6 py-28  flex items-center justify-center">
+  <div class="max-w-lg w-full mx-auto text-center">
+
+    <!-- Header -->
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Let’s Work Together</h2>
+    <p class="text-gray-600 mt-4 max-w-xl mx-auto">
+      I’m currently open to freelance projects and collaborations. Send me a message — I’d love to hear about what you’re building.
+    </p>
+
+    <!-- Form Card -->
+    <div class="mt-10 bg-white border border-gray-200 rounded-2xl p-6 md:p-8 shadow-sm">
+      <h3 class="text-2xl font-bold text-gray-900 mb-6">Send a Message ✉️</h3>
+      <form class="space-y-5">
+        <div class="border-b border-gray-300 pb-1">
+          <input 
+            type="text" 
+            placeholder="Your name" 
+            class="w-full bg-transparent border-none outline-none text-gray-900 placeholder-gray-500 py-1"
+          />
+        </div>
+        <div class="border-b border-gray-300 pb-1">
+          <input 
+            type="email" 
+            placeholder="your.email@gmail.com" 
+            class="w-full bg-transparent border-none outline-none text-gray-900 placeholder-gray-500 py-1"
+          />
+        </div>
+        <div class="border-b border-gray-300 pb-1">
+          <textarea 
+            rows="3" 
+            placeholder="Your message..." 
+            class="w-full bg-transparent border-none outline-none text-gray-900 placeholder-gray-500 py-1 resize-none"
+          ></textarea>
+        </div>
+        <button 
+          type="submit" 
+          class="w-full py-3 bg-indigo-600 text-white font-medium rounded-xl hover:bg-indigo-700 transition-colors duration-200"
+        >
+          Send Message
         </button>
       </form>
+
+      <!-- Social Icons (di tengah, di bawah form) -->
+      <div class="mt-8 pt-6 border-t border-gray-200">
+        <div class="flex justify-center gap-5">
+          <a href="https://github.com/MuhammadAhsan-RPL" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+            <i class="fab fa-github text-xl"></i>
+          </a>
+          <a href="www.linkedin.com/in/muhammad-ahsan-al-afghani-sofware-developer" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+            <i class="fab fa-linkedin-in text-xl"></i>
+          </a>
+          <a href="https://wa.me/6281514421495" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+            <i class="fab fa-whatsapp text-xl"></i>
+          </a>
+          <a href="https://instagram.com/@asanalfgn target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+            <i class="fab fa-instagram text-xl"></i>
+          </a>
+        </div>
+      </div>
+
     </div>
 
   </div>
 </section>
-
-<style>
-  .glass-card {
-    background: rgba(255, 255, 255, 0.75);
-    border: 1px solid #e5e7eb;
-    border-radius: 1rem;
-    box-shadow: 0 8px 28px rgba(0,0,0,0.08);
-    transition: transform .25s, box-shadow .25s;
-  }
-
-  .glass-card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 14px 36px rgba(0,0,0,0.12);
-  }
-
-  .form-input {
-    width: 100%;
-    padding: 12px 16px;
-    background: white;
-    border: 1px solid #d1d5db;
-    border-radius: 12px;
-    font-size: 15px;
-    transition: .25s;
-  }
-
-  .form-input:focus {
-    outline: none;
-    border-color: #4338CA;
-    box-shadow: 0 0 0 3px rgba(67,56,202,0.25);
-  }
-</style>
-
-
 
   <!-- Footer -->
   <footer class="px-4 py-10 text-center text-gray-500 text-sm">
