--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </p>
 
       <p class="mt-6 text-gray-700 leading-relaxed text-lg">
-         I craft <span class="font-semibold"> high-performance, scalable, and user-centered web applications </span> using modern and flexible technologies to solve real-world problems.
+         i craft<span class="font-semibold"> high-performance, scalable, and user-centered web applications </span> using modern and flexible technologies to solve real-world problems.
       </p>
 
       <div class="flex flex-wrap justify-center md:justify-start gap-4 mt-10">
