Fix hero layout and button alignment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Muhammad Ahsan | Web Developer</title>
+  <title>Muhammad Ahsan | Portofolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -73,8 +73,8 @@
         <a href="project.html" class="px-7 py-3.5 bg-primary text-white font-semibold rounded-xl hover:bg-indigo-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-0.5">
           View Projects
         </a>
-        <a href="siahsantv@gmail.com" class="px-7 py-3.5 bg-white border border-gray-300 text-gray-800 font-semibold rounded-xl hover:bg-gray-50 transition-all">
-          Let’s Collaborate
+        <a href="mailto:siahsantv@gmail.com" class="px-7 py-3.5 bg-white border border-gray-300 text-gray-800 font-semibold rounded-xl hover:bg-gray-50 transition-all">
+          Let’s Work Together
         </a>
       </div>
 
@@ -112,6 +112,10 @@
         <i class="fas fa-paint-brush text-2xl text-indigo-600"></i>
         <span>Tailwind CSS</span>
       </div>
+
+      <span class="badge bg-light text-dark d-flex align-items-center gap-1 px-2 py-1 rounded">
+  <i class="fab fa-bootstrap"></i> Bootstrap
+</span>
 
     </div>
   </div>
@@ -295,13 +299,14 @@ Corporate website for a digital agency featuring services, case studies and glob
           <a href="https://github.com/MuhammadAhsan-RPL" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
             <i class="fab fa-github text-xl"></i>
           </a>
-          <a href="www.linkedin.com/in/muhammad-ahsan-al-afghani-sofware-developer" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+          <a href="https://www.linkedin.com/in/muhammad-ahsan-al-afghani-sofware-developer/" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
             <i class="fab fa-linkedin-in text-xl"></i>
           </a>
-          <a href="https://wa.me/6281514421495" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+
+          <a href="https://wa.me/6281514421495?text=Lets%20Work.%20Together,%20With%20Me,%20Lets GOO."  target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
             <i class="fab fa-whatsapp text-xl"></i>
           </a>
-          <a href="https://instagram.com/@asanalfgn target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
+          <a href="https://www.instagram.com/asanalfgn/" target="_blank" class="text-gray-500 hover:text-indigo-700 transition-colors">
             <i class="fab fa-instagram text-xl"></i>
           </a>
         </div>
