--- a/project.html
+++ b/project.html
@@ -11,7 +11,10 @@
     tailwind.config = {
       theme: {
         extend: {
-          fontFamily: { sans: ['Inter', 'sans-serif'] }
+          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
+          color: {
+            primary: '#4338CA',
+          },
         }
       }
     }
@@ -21,17 +24,17 @@
 
   <!-- Header -->
   <header class="px-6 py-5 bg-white border-b sticky top-0 z-50">
-    <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-xl font-bold text-gray-900">Muhammad Ahsan</a>
-      <nav class="hidden md:flex space-x-6 font-medium text-gray-600">
-        <a href="index.html" class="hover:text-indigo-600">Home</a>
-        <a href="project.html" class="text-indigo-600 font-semibold border-b-2 border-indigo-600 pb-1">Projects</a>
-        <a href="index.html#contact" class="hover:text-indigo-600">Contact</a>
-      </nav>
-    </div>
-  </header>
+  <div class="max-w-6xl mx-auto flex justify-between items-center">
+    <a href="index.html" class="font-bold text-indigo-700">Muhammad Ahsan</a>
+    <nav class="hidden md:flex space-x-6 font-medium text-indigo-700">
+      <a href="index.html" class="hover:text-indigo-600">Home</a>
+      <a href="project.html" class="text-indigo-700 font-semibold border-b-2 border-indigo-700 pb-1">Projects</a>
+      <a href="index.html#contact" class="hover:text-indigo-600">Contact</a>
+    </nav>
+  </div>
+</header>
 
-<!------------------------------------------------>
+
   <!-- Hero -->
   <section class="text-center py-16 px-6">
     <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Featured Projects</h1>
@@ -40,128 +43,172 @@
     </p>
   </section>
 
-<!------------------------------------------------>
-  <div class="space-y-12">
+  <!-- Projects -->
+  <section class="max-w-4xl mx-auto px-6 pb-24">
+    <div class="space-y-12">
 
-   <!-- Project 1: E-Report -->
-<div class="flex flex-col md:flex-row gap-6 items-center mb-12">
-<div class="md:w-1/2">
-<img src="foto/ERepor.png" alt="One School E-Report" class="w-full rounded-xl shadow-md border border-gray-100">
-</div>
-<div class="md:w-1/2">
-<h3 class="text-2xl font-bold">One ​​School E-Report</h3>
-<p class="text-gray-600 mt-3 leading-relaxed">
-The official digital reporting platform for reporting student issues directly to teachers and guardians. Displays real-time status: Incoming → Actioned → Completed.
-</p>
+      <!-- Project 1: E-Report -->
+      <div class="flex flex-col md:flex-row gap-6 items-center">
+        <div class="md:w-1/2">
+          <img src="foto/ERepor.png" alt="One School E-Report" class="w-full rounded-xl shadow-md border border-gray-100">
+        </div>
+        <div class="md:w-1/2">
+          <h3 class="text-2xl font-bold">One School E-Report</h3>
+          <p class="text-gray-600 mt-3 leading-relaxed">
+            The official digital reporting platform for reporting student issues directly to teachers and guardians. Displays real-time status: Incoming → Actioned → Completed.
+          </p>
 
-<!-- Technical Details -->
-<div class="mt-6 pt-4 border-t border-gray-200">
-<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
-<p class="text-sm text-gray-600 mb-3">
-<strong>Role:</strong> Full-stack developer & UI/UX designer<br>
-<strong>Challenge:</strong> Maintaining the confidentiality of sensitive reports while ensuring status transparency.<br>
-<strong>Solution:</strong> Design a closed communication flow with two-way validation (teacher + system).
-</p> 
-<div class="flex flex-wrap gap-2"> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-html5 text-orange-500"></i> HTML 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-css3-alt text-blue-600"></i> CSS 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-js text-yellow-500"></i> JavaScript 
-</span> 
-</div> 
-</div> 
+          <!-- Technical Details -->
+          <div class="mt-6 pt-4 border-t border-gray-200">
+            <p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+            <p class="text-sm text-gray-600 mb-3">
+              <strong>Role:</strong> Full-stack developer & UI/UX designer<br>
+              <strong>Challenge:</strong> Maintaining the confidentiality of sensitive reports while ensuring status transparency.<br>
+              <strong>Solution:</strong> Design a closed communication flow with two-way validation (teacher + system).
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-html5 text-orange-500"></i> HTML
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-css3-alt text-blue-600"></i> CSS
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-js text-yellow-500"></i> JavaScript
+              </span>
+            </div>
+          </div>
 
-<a href="https://one-school-e-report.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a>
-<a href="https://github.com/MuhammadAhsan-RPL/One-School-E-Report" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
-</div>
-</div>
-<!------------------------------------------------>
-<!-- Project 2: Psychology -->
-<div class="flex flex-col md:flex-row-reverse gap-6 items-center mb-12"> 
-<div class="md:w-1/2"> 
-<img src="foto/Psikolog.png" alt="M-Ahsan Psychology" class="w-full rounded-xl shadow-md border border-gray-100"> 
-</div> 
-<div class="md:w-1/2"> 
-<h3 class="text-2xl font-bold">M-Ahsan Psychology</h3> 
-<p class="text-gray-600 mt-3 leading-relaxed"> 
-Bilingual (EN/ID) online therapy platform for clients in the US, featuring CA & NY licensing, as well as secure, encrypted Zoom sessions. 
-</p>
+          <div class="mt-4 flex flex-wrap gap-4">
+            <a href="https://one-school-e-report.vercel.app/" target="_blank" class="text-blue-600 font-medium hover:underline">Live Demo →</a>
+            <a href="https://github.com/MuhammadAhsan-RPL/One-School-E-Report" target="_blank" class="text-blue-600 font-medium hover:underline">Live Code →</a>
+          </div>
+        </div>
+      </div>
 
-<!-- Technical Details -->
-<div class="mt-6 pt-4 border-t border-gray-200">
-<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
-<p class="text-sm text-gray-600 mb-3">
-<strong>Role:</strong> Frontend developer & content strategist<br>
-<strong>Challenge:</strong> Conveying professional credentials while building emotional trust.<br>
-<strong>Solution:</strong> Human-touch visuals (photos of consultation rooms), clear text, and an emphasis on compliance (HIPAA).
-</p> 
-<div class="flex flex-wrap gap-2"> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-html5 text-orange-500"></i> HTML 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-css3-alt text-blue-600"></i> CSS 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-js text-yellow-500"></i> JavaScript 
-</span> 
-</span> 
-</div> 
-</div> 
+      <!-- Project 2: Psychology -->
+      <div class="flex flex-col md:flex-row-reverse gap-6 items-center">
+        <div class="md:w-1/2">
+          <img src="foto/Psikolog.png" alt="M-Ahsan Psychology" class="w-full rounded-xl shadow-md border border-gray-100">
+        </div>
+        <div class="md:w-1/2">
+          <h3 class="text-2xl font-bold">M-Ahsan Psychology</h3>
+          <p class="text-gray-600 mt-3 leading-relaxed">
+            Bilingual (EN/ID) online therapy platform for clients in the US, featuring CA & NY licensing, as well as secure, encrypted Zoom sessions.
+          </p>
 
-<a href="https://m-ahsan-psychology.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a>
-<a href="https://github.com/MuhammadAhsan-RPL/M-Ahsan-Psychology" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
-</div>
-</div>
-<!------------------------------------------------>
-<!-- Project 3: Prime Edge -->
-<div class="flex flex-col md:flex-row gap-6 items-center mb-12"> 
-<div class="md:w-1/2"> 
-<img src="foto/primeEdge .png" alt="Prime Edge Digital" class="w-full rounded-xl shadow-md border border-gray-100"> 
-</div> 
-<div class="md:w-1/2"> 
-<h3 class="text-2xl font-bold">Prime Edge Digital</h3> 
-<p class="text-gray-600 mt-3 leading-relaxed"> 
-Corporate website for a digital agency featuring services, case studies and global client testimonials. 
-</p>
+          <!-- Technical Details -->
+          <div class="mt-6 pt-4 border-t border-gray-200">
+            <p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+            <p class="text-sm text-gray-600 mb-3">
+              <strong>Role:</strong> Frontend developer & content strategist<br>
+              <strong>Challenge:</strong> Conveying professional credentials while building emotional trust.<br>
+              <strong>Solution:</strong> Human-touch visuals (photos of consultation rooms), clear text, and an emphasis on compliance (HIPAA).
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-html5 text-orange-500"></i> HTML
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-css3-alt text-blue-600"></i> CSS
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-js text-yellow-500"></i> JavaScript
+              </span>
+            </div>
+          </div>
 
-<!-- Technical Details -->
-<div class="mt-6 pt-4 border-t border-gray-200">
-<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
-<p class="text-sm text-gray-600 mb-3">
-<strong>Role:</strong> Lead frontend developer<br>
-<strong>Challenge:</strong> Balancing premium aesthetics with loading speed & SEO.<br>
-<strong>Solution:</strong> Modular components, lazy image loading, and a scalable CSS architecture.
-</p> 
-<div class="flex flex-wrap gap-2"> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-html5 text-orange-500"></i> HTML 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fas fa-paint-brush text-indigo-600"></i> Tailwind CSS 
-</span> 
-<span class="badge bg-light text-dark d-flex align-items-center gap-1 px-2 py-1 rounded">
-  <i class="fab fa-bootstrap"></i> Bootstrap
-</span>
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-js text-yellow-500"></i> JavaScript 
-</span> 
-</div> 
-</div> 
+          <div class="mt-4 flex flex-wrap gap-4">
+            <a href="https://m-ahsan-psychology.vercel.app/" target="_blank" class="text-blue-600 font-medium hover:underline">Live Demo →</a>
+            <a href="https://github.com/MuhammadAhsan-RPL/M-Ahsan-Psychology" target="_blank" class="text-blue-600 font-medium hover:underline">Live Code →</a>
+          </div>
+        </div>
+      </div>
 
-<a href="https://prime-edge-digital.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a> 
-<a href="https://github.com/MuhammadAhsan-RPL/Company-Website" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
-</div>
-</div>
+      <!-- Project 3: Prime Edge -->
+      <div class="flex flex-col md:flex-row gap-6 items-center">
+        <div class="md:w-1/2">
+          <img src="foto/primeEdge.png" alt="Prime Edge Digital" class="w-full rounded-xl shadow-md border border-gray-100">
+        </div>
+        <div class="md:w-1/2">
+          <h3 class="text-2xl font-bold">Prime Edge Digital</h3>
+          <p class="text-gray-600 mt-3 leading-relaxed">
+            Corporate website for a digital agency featuring services, case studies and global client testimonials.
+          </p>
 
-<!------------------------------------------------>
- <!-- Footer -->
-  <footer class="px-4 py-10 text-center text-gray-500 text-sm">
-    &copy; 2025 Muhammad Ahsan. All Projects.
+          <!-- Technical Details -->
+          <div class="mt-6 pt-4 border-t border-gray-200">
+            <p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+            <p class="text-sm text-gray-600 mb-3">
+              <strong>Role:</strong> Lead frontend developer<br>
+              <strong>Challenge:</strong> Balancing premium aesthetics with loading speed & SEO.<br>
+              <strong>Solution:</strong> Modular components, lazy image loading, and a scalable CSS architecture.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-html5 text-orange-500"></i> HTML
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fas fa-paint-brush text-indigo-600"></i> Tailwind CSS
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-js text-yellow-500"></i> JavaScript
+              </span>
+            </div>
+          </div>
+
+          <div class="mt-4 flex flex-wrap gap-4">
+            <a href="https://prime-edge-digital.vercel.app/" target="_blank" class="text-blue-600 font-medium hover:underline">Live Demo →</a>
+            <a href="https://github.com/MuhammadAhsan-RPL/Company-Website" target="_blank" class="text-blue-600 font-medium hover:underline">Live Code →</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 4: Catatan App -->
+      <div class="flex flex-col md:flex-row-reverse gap-6 items-center">
+        <div class="md:w-1/2">
+          <img src="foto/catatan-app.png" alt="Catatan Application" class="w-full rounded-xl shadow-md border border-gray-100">
+        </div>
+        <div class="md:w-1/2">
+          <h3 class="text-2xl font-bold">Catatan Application</h3>
+          <p class="text-gray-600 mt-3 leading-relaxed">
+            A minimalist note-taking app with user authentication and real-time sync across devices.
+          </p>
+
+          <!-- Technical Details -->
+          <div class="mt-6 pt-4 border-t border-gray-200">
+            <p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
+            <p class="text-sm text-gray-600 mb-3">
+              <strong>Role:</strong> Solo full-stack developer<br>
+              <strong>Challenge:</strong> Securing user data without a custom backend.<br>
+              <strong>Solution:</strong> Leveraged Firebase Auth and Firestore with strict security rules.
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-vuejs text-green-600"></i> Vue.js
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fab fa-google text-red-500"></i> Firebase
+              </span>
+              <span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs">
+                <i class="fas fa-paint-brush text-indigo-600"></i> Tailwind CSS
+              </span>
+            </div>
+          </div>
+
+          <div class="mt-4 flex flex-wrap gap-4">
+            <a href="#" class="text-blue-600 font-medium hover:underline">Live Demo →</a>
+            <a href="#" class="text-blue-600 font-medium hover:underline">Live Code →</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center text-gray-500 text-sm py-8 border-t">
+    © 2025 Muhammad Ahsan. All rights reserved.
   </footer>
 
 </body>
