--- a/index.html
+++ b/index.html
@@ -281,6 +281,31 @@
 
   const form = document.getElementById("contactForm");
 
+  function showToast(message, type = "success") {
+  const toast = document.getElementById("toast");
+  const toastMessage = document.getElementById("toast-message");
+  const toastIcon = document.getElementById("toast-icon");
+
+  toastMessage.textContent = message;
+
+  if (type === "success") {
+    toast.className =
+      "fixed top-5 right-5 z-50 flex items-center gap-3 rounded-xl bg-green-600 px-5 py-4 text-white shadow-lg";
+    toastIcon.textContent = "✔";
+  } else {
+    toast.className =
+      "fixed top-5 right-5 z-50 flex items-center gap-3 rounded-xl bg-red-600 px-5 py-4 text-white shadow-lg";
+    toastIcon.textContent = "✖";
+  }
+
+  toast.classList.remove("hidden");
+
+  setTimeout(() => {
+    toast.classList.add("hidden");
+  }, 3000);
+}
+
+
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
 
@@ -296,14 +321,28 @@
         createdAt: serverTimestamp()
       });
 
-      alert("✅ Message sent successfully!");
-      form.reset();
+      showToast(
+  "Thank you for trusting me to collaborate with you. I’ll get back to you as soon as possible!",
+  "success"
+);
     } catch (err) {
-      alert("❌ Failed to send message");
+      alert("❌ Sorry, Failed to send message");
       console.error(err);
     }
   });
 </script>
+
+<!-- Toast Notification -->
+<div
+  id="toast"
+  class="fixed top-5 right-5 z-50 hidden items-center gap-3 rounded-xl px-5 py-4 text-white shadow-lg transition-all duration-300"
+>
+  <span id="toast-icon" class="text-xl">✔</span>
+  <span id="toast-message" class="text-sm font-medium">
+    Success
+  </span>
+</div>
+
 
 </body>
 </html>
